spec: Don't save/restore running VMs on libvirt-client update
The previous attempt (commit d65e0e1) removed just one of two
libvirt-guests restarts that happened on libvirt-client update. Let's
remove the last one too :-)

https://bugzilla.redhat.com/show_bug.cgi?id=962225

Signed-off-by: Jiri Denemark <jdenemar@redhat.com>
(cherry picked from commit 604f79b3603d6f7d922c7155d67ff9617411e79f)

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -1622,7 +1622,7 @@ fi
 /sbin/ldconfig
 %if %{with_systemd}
     %if %{with_systemd_macros}
-        %systemd_postun_with_restart libvirt-guests.service
+        %systemd_postun libvirt-guests.service
     %endif
 %triggerun client -- libvirt < 0.9.4
 %{_bindir}/systemd-sysv-convert --save libvirt-guests >/dev/null 2>&1 ||:
