Pull lxcContainerGetSubtree out into shared virfile module
Move the code for lxcContainerGetSubtree into the virfile
module creating 2 new functions

  int virFileGetMountSubtree(const char *mtabpath,
                             const char *prefix,
                             char ***mountsret,
                             size_t *nmountsret);
  int virFileGetMountReverseSubtree(const char *mtabpath,
                                    const char *prefix,
                                    char ***mountsret,
                                    size_t *nmountsret);

Add a new virfiletest.c test case to validate the new code.

Signed-off-by: Daniel P. Berrange <berrange@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -195,6 +195,7 @@
 /tests/virdbustest
 /tests/virdrivermoduletest
 /tests/virendiantest
+/tests/virfiletest
 /tests/virhashtest
 /tests/viridentitytest
 /tests/virkeycodetest
