--- a/include/libvirt/libvirt.h.in
+++ b/include/libvirt/libvirt.h.in
@@ -3463,7 +3463,7 @@ typedef enum {
 /**
  * virDomainEventDefinedDetailType:
  *
- * Details on the causes of the 'defined' lifecycle event
+ * Details on the cause of a 'defined' lifecycle event
  */
 typedef enum {
     VIR_DOMAIN_EVENT_DEFINED_ADDED = 0,     /* Newly created config file */
@@ -3477,7 +3477,7 @@ typedef enum {
 /**
  * virDomainEventUndefinedDetailType:
  *
- * Details on the causes of the 'undefined' lifecycle event
+ * Details on the cause of an 'undefined' lifecycle event
  */
 typedef enum {
     VIR_DOMAIN_EVENT_UNDEFINED_REMOVED = 0, /* Deleted the config file */
@@ -3490,7 +3490,7 @@ typedef enum {
 /**
  * virDomainEventStartedDetailType:
  *
- * Details on the causes of the 'started' lifecycle event
+ * Details on the cause of a 'started' lifecycle event
  */
 typedef enum {
     VIR_DOMAIN_EVENT_STARTED_BOOTED = 0,   /* Normal startup from boot */
@@ -3507,7 +3507,7 @@ typedef enum {
 /**
  * virDomainEventSuspendedDetailType:
  *
- * Details on the causes of the 'suspended' lifecycle event
+ * Details on the cause of a 'suspended' lifecycle event
  */
 typedef enum {
     VIR_DOMAIN_EVENT_SUSPENDED_PAUSED = 0,   /* Normal suspend due to admin pause */
@@ -3526,7 +3526,7 @@ typedef enum {
 /**
  * virDomainEventResumedDetailType:
  *
- * Details on the causes of the 'resumed' lifecycle event
+ * Details on the cause of a 'resumed' lifecycle event
  */
 typedef enum {
     VIR_DOMAIN_EVENT_RESUMED_UNPAUSED = 0,   /* Normal resume due to admin unpause */
@@ -3541,7 +3541,7 @@ typedef enum {
 /**
  * virDomainEventStoppedDetailType:
  *
- * Details on the causes of the 'stopped' lifecycle event
+ * Details on the cause of a 'stopped' lifecycle event
  */
 typedef enum {
     VIR_DOMAIN_EVENT_STOPPED_SHUTDOWN = 0,  /* Normal shutdown */
@@ -3561,7 +3561,7 @@ typedef enum {
 /**
  * virDomainEventShutdownDetailType:
  *
- * Details about the 'shutdown' lifecycle event
+ * Details on the cause of a 'shutdown' lifecycle event
  */
 typedef enum {
     VIR_DOMAIN_EVENT_SHUTDOWN_FINISHED = 0, /* Guest finished shutdown sequence */
@@ -3574,7 +3574,7 @@ typedef enum {
 /**
  * virDomainEventPMSuspendedDetailType:
  *
- * Details about the 'pmsuspended' lifecycle event
+ * Details on the cause of a 'pmsuspended' lifecycle event
  */
 typedef enum {
     VIR_DOMAIN_EVENT_PMSUSPENDED_MEMORY = 0, /* Guest was PM suspended to memory */
@@ -3585,8 +3585,10 @@ typedef enum {
 #endif
 } virDomainEventPMSuspendedDetailType;
 
+/**
+ * virDomainEventCrashedDetailType:
 /*
- * Details about the 'crashed' lifecycle event
+ * Details on the cause of a 'crashed' lifecycle event
  */
 typedef enum {
     VIR_DOMAIN_EVENT_CRASHED_PANICKED = 0, /* Guest was panicked */
