--- a/tests/networkxml2confdata/dhcp6-network.conf
+++ b/tests/networkxml2confdata/dhcp6-network.conf
@@ -5,10 +5,10 @@
 ##
 ## dnsmasq conf file created by libvirt
 strict-order
-domain-needed
 domain=mynet
 expand-hosts
-local=/mynet/
+domain-needed
+local=//
 except-interface=lo
 bind-dynamic
 interface=virbr0
