--- a/tests/networkxml2confdata/netboot-proxy-network.conf
+++ b/tests/networkxml2confdata/netboot-proxy-network.conf
@@ -5,10 +5,10 @@
 ##
 ## dnsmasq conf file created by libvirt
 strict-order
-domain-needed
 domain=example.com
 expand-hosts
-local=/example.com/
+domain-needed
+local=//
 except-interface=lo
 bind-interfaces
 listen-address=192.168.122.1
