virtlockd: treat SIGHUP like SIGUSR1
SIGHUP is commonly used to instruct a daemon to reload its config. For
now we should handle it in virtlockd just like SIGUSR1, rather than
having it kill the process.

Signed-off-by: Michael Chapman <mike@very.puzzling.org>
Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/src/locking/virtlockd.pod.in
+++ b/src/locking/virtlockd.pod.in
@@ -54,9 +54,9 @@ Display version information then exit.
 
 =head1 SIGNALS
 
-On receipt of B<SIGUSR1> virtlockd will re-exec() its binary, while
-maintaining all current locks and clients. This allows for live
-upgrades of the virtlockd service.
+On receipt of B<SIGUSR1> or B<SIGHUP> virtlockd will re-exec() its
+binary, while maintaining all current locks and clients. This allows
+for live upgrades of the virtlockd service.
 
 =head1 FILES
 
